2005-01-20  Angus Leeming  <leeming@lyx.org>

	* output_latex.C (TeXOnePar, TeXEnvironment): prevent crash when
	printing diagnostic data by not dereferecing an iterator past the
	end.

2005-01-19  Asger Ottar Alstrup  <aalstrup@laerdal.dk>

	* buffer.C (readHeader): use "&&" rather than "and".

	* lyxserver.h (inPipeName, outPipeName): make these const.

2005-01-19  Angus Leeming  <leeming@lyx.org>

	* lyx_main.C (error_handler, init): protect SIGHUP with
	#ifdef SIGHUP guards.

2005-01-19  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* LaTeXFeatures.C: rename feature "wasy" to "wasysym".

2005-01-11  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* text.C (setHeightOfRow): add a margin at the top and bottom of
	the document (bug 1761)

2005-01-17  Angus Leeming  <leeming@lyx.org>

	* buffer.C (readFile): prepend the name of the "lyx2lyx" script
	with "python ". Workaround for a brain-dead Windows.

2005-01-16  Angus Leeming  <leeming@lyx.org>

	* lyx_main.[Ch] (init): rewrite code to prepend the CWD to the PATH
	for MacOSX and Windows to use prependEnvPath.
	Strip out the hard-coded block to add elements to the PATH for
	MacOSX and replace it with a call to prependEnvPath using the
	contents of LyXRC::path_prefix.
	(queryUserLyXDir): strip out the code to run reconfigure, instead
	returning a boolean indicating the necessity to do so.
	(reconfigureUserLyXDir): contains the code to reconfigure the
	user support directory. Is now called after the various LyXRC data
	files have been read.

	* lyxrc.[Ch]: add path_prefix var and code to read/write it.

2005-01-14  Georg Baum  <Georg.Baum@post.rwth-aachen.de>

	* converter.[Ch] (convert): take a new parameter try_default. Use
	a default converter (imagemagick) if try_default is true.

2005-01-13  Angus Leeming  <leeming@lyx.org>

	* lyxrc.C (read): use LyXRC::cygwin_path_fix to set the value of
	os::cygwin_path_fix.
	(write): output LyXRC::cygwin_path_fix as necessary.

2005-01-02  Kayvan Sylvan  <kayvan@sylvan.com>
