@@ -1,3 +1,8 @@
+2005-01-20  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
+
+	* floatplacement.C (heredefinitelyClicked): remove bogus
+	semicolon. 
+
 2005-01-15  Angus Leeming  <leeming@lyx.org>
 
 	* QPrefs.C, QPrefsDialog.C, ui/QPrefPathsModule.ui: add an interface
